# Member-Event-Stream-Agent

./: .env.example  .gitignore  Dockerfile  README.md  README_ADK_Plan.md  README_Development_Plan.md  README_HealthCare.md  package.json  pyproject.toml
.github/workflows/: GCP_001_enable_apis.yml  GCP_002_artifact_registry.yml  GCP_003_build_image.yml  GCP_004_deploy_cloud_run.yml  GCP_005_smoke_test.yml  GCP_099_destroy_all.yml  GCP_100_create_all.yml  ci.yml
DevOps/Local/: docker-all-run.sh  docker-all-status.sh  docker-all-stop.sh  setup-install.sh  setup-venv.sh
DevOps/Local/VectorDBs/: README.md
DevOps/Local/kafka/: docker-compose.yml
DevOps/Local/mongodb/: docker-compose.yml
DevOps/Local/postgres/: docker-compose.yml
DevOps/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.example.yaml  service.yaml
Docs/Design/: adk_design.drawio  architecture.drawio
src/member_event_stream_agent/: __init__.py  config.py  logging.py  main.py
src/member_event_stream_agent/api/: __init__.py
src/member_event_stream_agent/care_decisioning/: __init__.py  base.py  enrichment.py  pipeline.py  recommendation.py  rescore.py  scoring.py  triage.py
src/member_event_stream_agent/care_team_gateway/: __init__.py  auth.py  server.py  tools.py
src/member_event_stream_agent/events/: __init__.py
src/member_event_stream_agent/mcp_gateway/: __init__.py
src/member_event_stream_agent/member_events/: __init__.py  consumer.py  late_claim_worker.py  normalizer.py  producer.py  schemas.py  synthetic_seeder.py
src/member_event_stream_agent/member_record/: __init__.py  indexes.py  mongo.py  schemas.py
src/member_event_stream_agent/payer_api/: __init__.py  app.py  (+2 more)
tests/: test_logging_phi.py  test_synthetic_smoke.py
tests/care_decisioning/: test_adk_factory.py  test_enrichment.py  test_enrichment_recommendation_adk.py  test_pipeline.py  test_recommendation.py  test_rescore.py  test_scoring.py  test_scoring_adk.py  test_triage.py  test_triage_adk.py  test_vector_seam.py
tests/care_team_gateway/: test_extra_tools.py  test_server.py  test_tools.py
tests/member_events/: test_consumer.py  test_normalizer.py  test_schemas.py
tests/member_record/: test_mongo.py  test_schemas.py
tests/payer_api/: test_app.py
(+27 files in other folders)
